--- a/factory/03-tree/06-tree-technical[fr].tex
+++ b/factory/03-tree/06-tree-technical[fr].tex
@@ -18,7 +18,9 @@
 
 \IDenv[n]{probatree*}
 
-\Content{} un arbre codé en utilisant la syntaxe supportée par le package \verb+forest+.
+\IDenv[n]{probatree**}
+
+\Content{} un arbre codé en utilisant la syntaxe supportée par le package \verb#forest#.
 
 \extraspace
 
@@ -30,6 +32,17 @@
 
 \extraspace
 
+\IDkey{pweight*} pour indiquer un poids sans l'imprimer.
+Dans l'environnement \env{probatree**}, le poids sera affiché comme si on avait utilisé \verb#pweight#.
+
+\IDkey{apweight*} pour indiquer un poids sans l'imprimer.
+Dans l'environnement \env{probatree**}, le poids sera affiché comme si on avait utilisé \verb#apweight#.
+
+\IDkey{bpweight*} pour indiquer un poids sans l'imprimer.
+Dans l'environnement \env{probatree**}, le poids sera affiché comme si on avait utilisé \verb#bpweight#.
+
+\extraspace
+
 \IDkey{pframe} pour encadrer un sous-arbre depuis un noeud vers toutes les feuilles de celui-ci.
 
 
@@ -38,7 +51,12 @@
 
 \IDmacro{ptreeFrame}{1}{3} \hfill \mwhyprefix{p}{robabilty}
 
-\IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
+\IDoption{} un système de type \texttt{clé=valeur}.
+
+\begin{enumerate}
+	\item \verb#col# : une couleur au format TikZ. La valeur par défaut est \verb#blue#.
+\end{enumerate}
+
 
 \IDargs{1..3} les noms de la sous-racine (à gauche), du noeud final en haut (à droite) et du noeud final en bas (à droite) tous indiqués via \verb#name = ...# \emph{(en fait l'ordre n'est pas important ici)}.
 
@@ -59,7 +77,15 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 
 \IDmacro{ptreeComment}{1}{2}
 
-\IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#black#.
+\IDoption{} un système de type \texttt{clé=valeur}.
+
+\begin{enumerate}
+	\item \verb#col# : une couleur au format TikZ. La valeur par défaut est \verb#black#.
+
+	\item \verb#dx# : une distance horizontale relative de décalage. La valeur par défaut est \verb#0cm#.
+
+	\item \verb#dy# : une distance verticale relative de décalage. La valeur par défaut est \verb#0cm#.
+\end{enumerate}
 
 \IDarg{1} le nom de la feuille.
 
@@ -86,7 +112,11 @@ Voir les indications précédentes excepté qu'ici on utilise le système de nom
 
 \IDmacro{ptreeFocus**}{1}{1}
 
-\IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
+\IDoption{} un système de type \texttt{clé=valeur}.
+
+\begin{enumerate}
+	\item \verb#col# : une couleur au format TikZ. La valeur par défaut est \verb#blue#.
+\end{enumerate}
 
 \IDarg{} les noms des noeuds indiqués via \verb#name = ...# à fournir dans le bon ordre et à séparer par des barres verticales \verb#|#.
 
