--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,6 +22,26 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-08-09] Nouvelle version mineure \verb+0.7.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic{Arbre de probabilités}
+        \begin{itemize}[itemsep=.5em]
+            \item Utilisation obligatoire de \verb#col=...# pour indiquer une couleur à toutes les macros de décoration.
+            
+            \item Les macros \macro{ptreeComment}, \macro{ptreeComment*}, 
+                  \macro{aptreeComment} et \macro{aptreeComment*}
+                  ont deux clés \verb#dx# et \verb#dy# pour indiquer un décalage relatif.
+            
+            \item Ajout de l'environnement \env{probatree**} qui force l'affichage de tous les poids !
+        \end{itemize}
+    \end{itemize}
+    
+    
+    \separation
+% ------------------------ %
+
+    \medskip
     \item[2020-08-08] Nouvelle version mineure \verb+0.6.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
