--- a/factory/03-tree/02-coment[fr].tex
+++ b/factory/03-tree/02-coment[fr].tex
@@ -16,7 +16,7 @@
 
 %\section{Arbres pondérés}
 
-\subsection{Commenter les racines}
+\subsection{Commenter les feuilles}
 
 \newparaexample{Tout aligner}
 
