New minor version 0.8.0-beta : math mode for proba trees

--- a/factory/03-tree/01-basic[fr].tex
+++ b/factory/03-tree/01-basic[fr].tex
@@ -38,8 +38,14 @@ Dans le code suivant, ce sont les clés
 Indiquons que \prefix{pweight} vient de \whyprefix{p}{robability} et \prefix{weight} soit \inenglish*{probabilité} et \inenglish{poids}.
 Quant au \prefix{a} et au \prefix{b} au début de \prefix{apweight} et \prefix{bpweight} respectivement, ils viennent de \whyprefix{a}{bove} et \whyprefix{b}{elow} soit \inenglish*{dessus} et \inenglish{dessous}.
 
-
 \inputlatexex{TikZ/probatree-weight-placement.tkz}
+
+
+\begin{remark}
+	Notez que le mode mathématique est activé par défaut pour les noms de noeuds et les poids comme le montre l'exemple improbable ci-dessous.
+
+	\inputlatexex{TikZ/probatree-math-mode.tkz}
+\end{remark}
 
 
 % ---------------------- %
