--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,6 +22,18 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-08-10] Nouvelle version mineure \verb+0.8.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic*{Arbre de probabilités}
+              le mode mathématique est activé par défaut pour les noms des noeuds et les poids \emph{(plus besoin de taper de \texttt{\$})}.
+    \end{itemize}
+    
+    
+    \separation
+% ------------------------ %
+
+    \medskip
     \item[2020-08-09] Nouvelle version mineure \verb+0.7.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
