--- a/tnsproba/tnsproba.sty
+++ b/tnsproba/tnsproba.sty
@@ -14,8 +14,8 @@
 \RequirePackage{xstring}
 
 % TikZ libraries
-\usetikzlibrary{babel}
 \usetikzlibrary{calc}
+\usetikzlibrary{babel}
 
 
 % ------------- %
@@ -105,22 +105,22 @@
 	%
     apweight/.style = {
     	edge label = {
-			node[pos=.5,sloped,above, fill=white]{#1}
+			node[pos=.5,sloped,above, fill=white]{$#1$}
 		}
 	},
     bpweight/.style = {
     	edge label = {
-			node[pos=.5,sloped,below, fill=white]{#1}
+			node[pos=.5,sloped,below, fill=white]{$#1$}
 		}
 	},
     pweight/.style = {
     	edge label={
-			node[midway, fill=white]{#1}
+			node[midway, fill=white]{$#1$}
 		}
 	},
-    pweight*/.style = {},
     apweight*/.style = {},
     bpweight*/.style = {},
+    pweight*/.style = {},
 }
 
 
@@ -147,6 +147,7 @@
             l      = 2.5cm,
             s sep  = 1.2cm,
             anchor = parent,
+            math content
         },
         before typesetting nodes = {%
             where connections = 1{}{%
@@ -232,17 +233,17 @@
     \forestset{
         apweight*/.style = {
         	edge label = {
-    			node[pos=.5,sloped,above, fill=white]{##1}
+    			node[pos=.5,sloped,above, fill=white]{$##1$}
     		}
     	},
         bpweight*/.style = {
         	edge label = {
-    			node[pos=.5,sloped,below, fill=white]{##1}
+    			node[pos=.5,sloped,below, fill=white]{$##1$}
     		}
     	},
         pweight*/.style = {
         	edge label={
-    			node[midway, fill=white]{##1}
+    			node[midway, fill=white]{$##1$}
     		}
     	},
     }
