--- a/factory/03-tree/01-basic.sty
+++ b/factory/03-tree/01-basic.sty
@@ -21,22 +21,22 @@
 	%
     apweight/.style = {
     	edge label = {
-			node[pos=.5,sloped,above, fill=white]{#1}
+			node[pos=.5,sloped,above, fill=white]{$#1$}
 		}
 	},
     bpweight/.style = {
     	edge label = {
-			node[pos=.5,sloped,below, fill=white]{#1}
+			node[pos=.5,sloped,below, fill=white]{$#1$}
 		}
 	},
     pweight/.style = {
     	edge label={
-			node[midway, fill=white]{#1}
+			node[midway, fill=white]{$#1$}
 		}
 	},
-    pweight*/.style = {},
     apweight*/.style = {},
     bpweight*/.style = {},
+    pweight*/.style = {},
 }
 
 
@@ -63,6 +63,7 @@
             l      = 2.5cm,
             s sep  = 1.2cm,
             anchor = parent,
+            math content
         },
         before typesetting nodes = {%
             where connections = 1{}{%
@@ -148,17 +149,17 @@
     \forestset{
         apweight*/.style = {
         	edge label = {
-    			node[pos=.5,sloped,above, fill=white]{##1}
+    			node[pos=.5,sloped,above, fill=white]{$##1$}
     		}
     	},
         bpweight*/.style = {
         	edge label = {
-    			node[pos=.5,sloped,below, fill=white]{##1}
+    			node[pos=.5,sloped,below, fill=white]{$##1$}
     		}
     	},
         pweight*/.style = {
         	edge label={
-    			node[midway, fill=white]{##1}
+    			node[midway, fill=white]{$##1$}
     		}
     	},
     }
